Small UI fix for dark mode.

--- a/src/app/pages/playground/shared/share-popup/shared/copy-input/copy-input.component.scss
+++ b/src/app/pages/playground/shared/share-popup/shared/copy-input/copy-input.component.scss
@@ -5,6 +5,7 @@
   input {
     border: var(--border-default);
     border-radius: var(--border-radius) 0 0 var(--border-radius);
+    background-color: var(--color-hint-first);
     padding: 1.5rem 1rem;
     width: 100%;
     z-index: 0;
